logs/mobility/build.make.070.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:868:7: error: ‘collectionPointVisualDistance’ was not declared in this scope
 print(collectionPointVisualDistance);
       ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
